refactor and update test